# simdock

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.appimage  Makefile.in  README  README.md  config.h  config.h.in  config.status  config.status.lineno  configure  configure.ac  libtool  mfb  simdock.desktop
.github/workflows/: appimage.yml  codeql.yml
debian/: changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  simdock-default.ex  simdock.doc-base.EX  simdock.substvars  watch.ex
debian/simdock/.svn/: all-wcprops  entries
debian/simdock/DEBIAN/.svn/: all-wcprops  entries
debian/simdock/DEBIAN/.svn/text-base/: control.svn-base  md5sums.svn-base
debian/simdock/usr/.svn/: all-wcprops  entries
debian/simdock/usr/sbin/.svn/: all-wcprops  entries
debian/simdock/usr/share/.svn/: all-wcprops  entries
debian/simdock/usr/share/doc/.svn/: all-wcprops  entries
debian/simdock/usr/share/doc/simdock/: README
debian/simdock/usr/share/doc/simdock/.svn/: all-wcprops  entries
debian/simdock/usr/share/doc/simdock/.svn/text-base/: README.Debian.svn-base  changelog.Debian.gz.svn-base
debian/simdock/usr/share/simdock/.svn/: all-wcprops  entries
doc-pak/: AUTHORS  README
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  background.cc  background.h  configure.scan  gconf_settings.cc  gconf_settings.h  interrupts.cc  launcher_dialog.cc  launcher_dialog.h  main.cc  main.h  main_arguments.cc  main_settings.cc  main_settings.h  myFrame.cc  myFrame.h  save_launchers.cc  settingsDialog.cc  settingsDialog.h  simImage.cc  simImage.h  simSettings.h  sim_gconf.cc  sim_gconf.h  simdock  tasks.cc  tasks.h  xstuff.cc  xstuff.h
src/.deps/: background.Po  gconf_background.Po  gconf_settings.Po  interrupts.Po  launcher_dialog.Po  main.Po  main_arguments.Po  main_settings.Po  myFrame.Po  save_launchers.Po  settingsDialog.Po  simImage.Po  sim_gconf.Po  tasks.Po  xstuff.Po
src/.deps/.svn/: all-wcprops  dir-prop-base  entries
