## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration


AM_CXXFLAGS = @CXXFLAGS@
bin_PROGRAMS = simdock

simdock_LDFLAGS = $(LDFLAGS)
simdock_LDADD = $(LIBS)


simdock_SOURCES = background.cc gconf_settings.h launcher_dialog.h main.h save_launchers.cc sim_gconf.cc simImage.h xstuff.cc background.h interrupts.cc main_arguments.cc main_settings.cc settingsDialog.cc sim_gconf.h tasks.cc xstuff.h gconf_settings.cc launcher_dialog.cc main.cc myFrame.h settingsDialog.h simImage.cc tasks.h myFrame.cc

